parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration
Rule 3     declaration_list -> declaration_list declaration
Rule 4     declaration -> varDeclaration
Rule 5     declaration -> statement
Rule 6     declaration -> funcDeclaration
Rule 7     declaration -> class
Rule 8     class -> CLASS ID LBRACE classDeclarationList RBRACE
Rule 9     classDeclarationList -> classDeclarationList classDeclaration
Rule 10    classDeclarationList -> classDeclaration
Rule 11    classDeclaration -> varDeclaration
Rule 12    classDeclaration -> funcDeclaration
Rule 13    statement -> expression
Rule 14    statement -> ifStatement
Rule 15    statement -> whileStatement
Rule 16    statement -> printStatement
Rule 17    statement -> returnStatement
Rule 18    returnStatement -> RETURN expression
Rule 19    ifStatement -> IF expression THEN LBRACE declaration_list RBRACE
Rule 20    ifStatement -> IF expression THEN LBRACE declaration_list RBRACE ELSE LBRACE declaration_list RBRACE
Rule 21    whileStatement -> WHILE expression THEN LBRACE declaration_list RBRACE
Rule 22    printStatement -> PRINT expression
Rule 23    varDeclaration -> type ID
Rule 24    varDeclaration -> type ID ASSIGN expression
Rule 25    type -> INT
Rule 26    type -> BOOL
Rule 27    type -> ID
Rule 28    expression -> assignment
Rule 29    assignment -> property ASSIGN logical
Rule 30    assignment -> logical
Rule 31    logical -> logical OR equality
Rule 32    logical -> logical AND equality
Rule 33    logical -> equality
Rule 34    equality -> equality EQUALS comparison
Rule 35    equality -> equality NOTEQUALS comparison
Rule 36    equality -> comparison
Rule 37    comparison -> comparison GREATER term
Rule 38    comparison -> comparison LESS term
Rule 39    comparison -> comparison GREATEROREQUAL term
Rule 40    comparison -> comparison LESSOREQUAL term
Rule 41    comparison -> term
Rule 42    term -> term PLUS factor
Rule 43    term -> term MINUS factor
Rule 44    term -> factor
Rule 45    factor -> factor TIMES unary
Rule 46    factor -> factor DIVIDE unary
Rule 47    factor -> unary
Rule 48    unary -> NOT unary
Rule 49    unary -> MINUS unary
Rule 50    unary -> property
Rule 51    property -> NEW primary LPAREN RPAREN
Rule 52    property -> property_list DOT call
Rule 53    property_list -> property_list DOT primary
Rule 54    property_list -> primary
Rule 55    property -> call
Rule 56    call -> primary LPAREN arguments RPAREN
Rule 57    call -> primary
Rule 58    primary -> NUMBER
Rule 59    primary -> ID
Rule 60    primary -> TRUE
Rule 61    primary -> FALSE
Rule 62    primary -> LPAREN expression RPAREN
Rule 63    arguments -> arguments COMMA expression
Rule 64    arguments -> expression
Rule 65    arguments -> <empty>
Rule 66    funcDeclaration -> FUNC ID LPAREN parameter_list RPAREN LBRACE declaration_list RBRACE
Rule 67    parameter_list -> parameter_list COMMA ID
Rule 68    parameter_list -> ID
Rule 69    parameter_list -> parameter_list COMMA type ID
Rule 70    parameter_list -> type ID
Rule 71    parameter_list -> <empty>

Terminals, with rules where they appear

AND                  : 32
ASSIGN               : 24 29
BOOL                 : 26
CLASS                : 8
COMMA                : 63 67 69
DIVIDE               : 46
DOT                  : 52 53
ELSE                 : 20
EQUALS               : 34
FALSE                : 61
FUNC                 : 66
GREATER              : 37
GREATEROREQUAL       : 39
ID                   : 8 23 24 27 59 66 67 68 69 70
IF                   : 19 20
INT                  : 25
LBRACE               : 8 19 20 20 21 66
LESS                 : 38
LESSOREQUAL          : 40
LPAREN               : 51 56 62 66
MINUS                : 43 49
NEW                  : 51
NOT                  : 48
NOTEQUALS            : 35
NUMBER               : 58
OR                   : 31
PLUS                 : 42
PRINT                : 22
RBRACE               : 8 19 20 20 21 66
RETURN               : 18
RPAREN               : 51 56 62 66
THEN                 : 19 20 21
TIMES                : 45
TRUE                 : 60
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

arguments            : 56 63
assignment           : 28
call                 : 52 55
class                : 7
classDeclaration     : 9 10
classDeclarationList : 8 9
comparison           : 34 35 36 37 38 39 40
declaration          : 2 3
declaration_list     : 1 3 19 20 20 21 66
equality             : 31 32 33 34 35
expression           : 13 18 19 20 21 22 24 62 63 64
factor               : 42 43 44 45 46
funcDeclaration      : 6 12
ifStatement          : 14
logical              : 29 30 31 32
parameter_list       : 66 67 69
primary              : 51 53 54 56 57
printStatement       : 16
program              : 0
property             : 29 50
property_list        : 52 53
returnStatement      : 17
statement            : 5
term                 : 37 38 39 40 41 42 43
type                 : 23 24 69 70
unary                : 45 46 47 48 49
varDeclaration       : 4 11
whileStatement       : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration_list declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . statement
    (6) declaration -> . funcDeclaration
    (7) declaration -> . class
    (23) varDeclaration -> . type ID
    (24) varDeclaration -> . type ID ASSIGN expression
    (13) statement -> . expression
    (14) statement -> . ifStatement
    (15) statement -> . whileStatement
    (16) statement -> . printStatement
    (17) statement -> . returnStatement
    (66) funcDeclaration -> . FUNC ID LPAREN parameter_list RPAREN LBRACE declaration_list RBRACE
    (8) class -> . CLASS ID LBRACE classDeclarationList RBRACE
    (25) type -> . INT
    (26) type -> . BOOL
    (27) type -> . ID
    (28) expression -> . assignment
    (19) ifStatement -> . IF expression THEN LBRACE declaration_list RBRACE
    (20) ifStatement -> . IF expression THEN LBRACE declaration_list RBRACE ELSE LBRACE declaration_list RBRACE
    (21) whileStatement -> . WHILE expression THEN LBRACE declaration_list RBRACE
    (22) printStatement -> . PRINT expression
    (18) returnStatement -> . RETURN expression
    (29) assignment -> . property ASSIGN logical
    (30) assignment -> . logical
    (51) property -> . NEW primary LPAREN RPAREN
    (52) property -> . property_list DOT call
    (55) property -> . call
    (31) logical -> . logical OR equality
    (32) logical -> . logical AND equality
    (33) logical -> . equality
    (53) property_list -> . property_list DOT primary
    (54) property_list -> . primary
    (56) call -> . primary LPAREN arguments RPAREN
    (57) call -> . primary
    (34) equality -> . equality EQUALS comparison
    (35) equality -> . equality NOTEQUALS comparison
    (36) equality -> . comparison
    (58) primary -> . NUMBER
    (59) primary -> . ID
    (60) primary -> . TRUE
    (61) primary -> . FALSE
    (62) primary -> . LPAREN expression RPAREN
    (37) comparison -> . comparison GREATER term
    (38) comparison -> . comparison LESS term
    (39) comparison -> . comparison GREATEROREQUAL term
    (40) comparison -> . comparison LESSOREQUAL term
    (41) comparison -> . term
    (42) term -> . term PLUS factor
    (43) term -> . term MINUS factor
    (44) term -> . factor
    (45) factor -> . factor TIMES unary
    (46) factor -> . factor DIVIDE unary
    (47) factor -> . unary
    (48) unary -> . NOT unary
    (49) unary -> . MINUS unary
    (50) unary -> . property

    FUNC            shift and go to state 15
    CLASS           shift and go to state 17
    INT             shift and go to state 18
    BOOL            shift and go to state 19
    ID              shift and go to state 9
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    PRINT           shift and go to state 23
    RETURN          shift and go to state 24
    NEW             shift and go to state 27
    NUMBER          shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    LPAREN          shift and go to state 16
    NOT             shift and go to state 40
    MINUS           shift and go to state 38

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    varDeclaration                 shift and go to state 4
    statement                      shift and go to state 5
    funcDeclaration                shift and go to state 6
    class                          shift and go to state 7
    type                           shift and go to state 8
    expression                     shift and go to state 10
    ifStatement                    shift and go to state 11
    whileStatement                 shift and go to state 12
    printStatement                 shift and go to state 13
    returnStatement                shift and go to state 14
    assignment                     shift and go to state 20
    property                       shift and go to state 25
    logical                        shift and go to state 26
    primary                        shift and go to state 28
    property_list                  shift and go to state 29
    call                           shift and go to state 30
    equality                       shift and go to state 31
    comparison                     shift and go to state 32
    term                           shift and go to state 36
    factor                         shift and go to state 37
    unary                          shift and go to state 39

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (3) declaration_list -> declaration_list . declaration
    (4) declaration -> . varDeclaration
    (5) declaration -> . statement
    (6) declaration -> . funcDeclaration
    (7) declaration -> . class
    (23) varDeclaration -> . type ID
    (24) varDeclaration -> . type ID ASSIGN expression
    (13) statement -> . expression
    (14) statement -> . ifStatement
    (15) statement -> . whileStatement
    (16) statement -> . printStatement
    (17) statement -> . returnStatement
    (66) funcDeclaration -> . FUNC ID LPAREN parameter_list RPAREN LBRACE declaration_list RBRACE
    (8) class -> . CLASS ID LBRACE classDeclarationList RBRACE
    (25) type -> . INT
    (26) type -> . BOOL
    (27) type -> . ID
    (28) expression -> . assignment
    (19) ifStatement -> . IF expression THEN LBRACE declaration_list RBRACE
    (20) ifStatement -> . IF expression THEN LBRACE declaration_list RBRACE ELSE LBRACE declaration_list RBRACE
    (21) whileStatement -> . WHILE expression THEN LBRACE declaration_list RBRACE
    (22) printStatement -> . PRINT expression
    (18) returnStatement -> . RETURN expression
    (29) assignment -> . property ASSIGN logical
    (30) assignment -> . logical
    (51) property -> . NEW primary LPAREN RPAREN
    (52) property -> . property_list DOT call
    (55) property -> . call
    (31) logical -> . logical OR equality
    (32) logical -> . logical AND equality
    (33) logical -> . equality
    (53) property_list -> . property_list DOT primary
    (54) property_list -> . primary
    (56) call -> . primary LPAREN arguments RPAREN
    (57) call -> . primary
    (34) equality -> . equality EQUALS comparison
    (35) equality -> . equality NOTEQUALS comparison
    (36) equality -> . comparison
    (58) primary -> . NUMBER
    (59) primary -> . ID
    (60) primary -> . TRUE
    (61) primary -> . FALSE
    (62) primary -> . LPAREN expression RPAREN
    (37) comparison -> . comparison GREATER term
    (38) comparison -> . comparison LESS term
    (39) comparison -> . comparison GREATEROREQUAL term
    (40) comparison -> . comparison LESSOREQUAL term
    (41) comparison -> . term
    (42) term -> . term PLUS factor
    (43) term -> . term MINUS factor
    (44) term -> . factor
    (45) factor -> . factor TIMES unary
    (46) factor -> . factor DIVIDE unary
    (47) factor -> . unary
    (48) unary -> . NOT unary
    (49) unary -> . MINUS unary
    (50) unary -> . property

    $end            reduce using rule 1 (program -> declaration_list .)
    FUNC            shift and go to state 15
    CLASS           shift and go to state 17
    INT             shift and go to state 18
    BOOL            shift and go to state 19
    ID              shift and go to state 9
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    PRINT           shift and go to state 23
    RETURN          shift and go to state 24
    NEW             shift and go to state 27
    NUMBER          shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    LPAREN          shift and go to state 16
    NOT             shift and go to state 40
    MINUS           shift and go to state 38

    declaration                    shift and go to state 41
    varDeclaration                 shift and go to state 4
    statement                      shift and go to state 5
    funcDeclaration                shift and go to state 6
    class                          shift and go to state 7
    type                           shift and go to state 8
    expression                     shift and go to state 10
    ifStatement                    shift and go to state 11
    whileStatement                 shift and go to state 12
    printStatement                 shift and go to state 13
    returnStatement                shift and go to state 14
    assignment                     shift and go to state 20
    property                       shift and go to state 25
    logical                        shift and go to state 26
    primary                        shift and go to state 28
    property_list                  shift and go to state 29
    call                           shift and go to state 30
    equality                       shift and go to state 31
    comparison                     shift and go to state 32
    term                           shift and go to state 36
    factor                         shift and go to state 37
    unary                          shift and go to state 39

state 3

    (2) declaration_list -> declaration .

    FUNC            reduce using rule 2 (declaration_list -> declaration .)
    CLASS           reduce using rule 2 (declaration_list -> declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration .)
    BOOL            reduce using rule 2 (declaration_list -> declaration .)
    ID              reduce using rule 2 (declaration_list -> declaration .)
    IF              reduce using rule 2 (declaration_list -> declaration .)
    WHILE           reduce using rule 2 (declaration_list -> declaration .)
    PRINT           reduce using rule 2 (declaration_list -> declaration .)
    RETURN          reduce using rule 2 (declaration_list -> declaration .)
    NEW             reduce using rule 2 (declaration_list -> declaration .)
    NUMBER          reduce using rule 2 (declaration_list -> declaration .)
    TRUE            reduce using rule 2 (declaration_list -> declaration .)
    FALSE           reduce using rule 2 (declaration_list -> declaration .)
    LPAREN          reduce using rule 2 (declaration_list -> declaration .)
    NOT             reduce using rule 2 (declaration_list -> declaration .)
    MINUS           reduce using rule 2 (declaration_list -> declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration .)
    RBRACE          reduce using rule 2 (declaration_list -> declaration .)


state 4

    (4) declaration -> varDeclaration .

    FUNC            reduce using rule 4 (declaration -> varDeclaration .)
    CLASS           reduce using rule 4 (declaration -> varDeclaration .)
    INT             reduce using rule 4 (declaration -> varDeclaration .)
    BOOL            reduce using rule 4 (declaration -> varDeclaration .)
    ID              reduce using rule 4 (declaration -> varDeclaration .)
    IF              reduce using rule 4 (declaration -> varDeclaration .)
    WHILE           reduce using rule 4 (declaration -> varDeclaration .)
    PRINT           reduce using rule 4 (declaration -> varDeclaration .)
    RETURN          reduce using rule 4 (declaration -> varDeclaration .)
    NEW             reduce using rule 4 (declaration -> varDeclaration .)
    NUMBER          reduce using rule 4 (declaration -> varDeclaration .)
    TRUE            reduce using rule 4 (declaration -> varDeclaration .)
    FALSE           reduce using rule 4 (declaration -> varDeclaration .)
    LPAREN          reduce using rule 4 (declaration -> varDeclaration .)
    NOT             reduce using rule 4 (declaration -> varDeclaration .)
    MINUS           reduce using rule 4 (declaration -> varDeclaration .)
    $end            reduce using rule 4 (declaration -> varDeclaration .)
    RBRACE          reduce using rule 4 (declaration -> varDeclaration .)


state 5

    (5) declaration -> statement .

    FUNC            reduce using rule 5 (declaration -> statement .)
    CLASS           reduce using rule 5 (declaration -> statement .)
    INT             reduce using rule 5 (declaration -> statement .)
    BOOL            reduce using rule 5 (declaration -> statement .)
    ID              reduce using rule 5 (declaration -> statement .)
    IF              reduce using rule 5 (declaration -> statement .)
    WHILE           reduce using rule 5 (declaration -> statement .)
    PRINT           reduce using rule 5 (declaration -> statement .)
    RETURN          reduce using rule 5 (declaration -> statement .)
    NEW             reduce using rule 5 (declaration -> statement .)
    NUMBER          reduce using rule 5 (declaration -> statement .)
    TRUE            reduce using rule 5 (declaration -> statement .)
    FALSE           reduce using rule 5 (declaration -> statement .)
    LPAREN          reduce using rule 5 (declaration -> statement .)
    NOT             reduce using rule 5 (declaration -> statement .)
    MINUS           reduce using rule 5 (declaration -> statement .)
    $end            reduce using rule 5 (declaration -> statement .)
    RBRACE          reduce using rule 5 (declaration -> statement .)


state 6

    (6) declaration -> funcDeclaration .

    FUNC            reduce using rule 6 (declaration -> funcDeclaration .)
    CLASS           reduce using rule 6 (declaration -> funcDeclaration .)
    INT             reduce using rule 6 (declaration -> funcDeclaration .)
    BOOL            reduce using rule 6 (declaration -> funcDeclaration .)
    ID              reduce using rule 6 (declaration -> funcDeclaration .)
    IF              reduce using rule 6 (declaration -> funcDeclaration .)
    WHILE           reduce using rule 6 (declaration -> funcDeclaration .)
    PRINT           reduce using rule 6 (declaration -> funcDeclaration .)
    RETURN          reduce using rule 6 (declaration -> funcDeclaration .)
    NEW             reduce using rule 6 (declaration -> funcDeclaration .)
    NUMBER          reduce using rule 6 (declaration -> funcDeclaration .)
    TRUE            reduce using rule 6 (declaration -> funcDeclaration .)
    FALSE           reduce using rule 6 (declaration -> funcDeclaration .)
    LPAREN          reduce using rule 6 (declaration -> funcDeclaration .)
    NOT             reduce using rule 6 (declaration -> funcDeclaration .)
    MINUS           reduce using rule 6 (declaration -> funcDeclaration .)
    $end            reduce using rule 6 (declaration -> funcDeclaration .)
    RBRACE          reduce using rule 6 (declaration -> funcDeclaration .)


state 7

    (7) declaration -> class .

    FUNC            reduce using rule 7 (declaration -> class .)
    CLASS           reduce using rule 7 (declaration -> class .)
    INT             reduce using rule 7 (declaration -> class .)
    BOOL            reduce using rule 7 (declaration -> class .)
    ID              reduce using rule 7 (declaration -> class .)
    IF              reduce using rule 7 (declaration -> class .)
    WHILE           reduce using rule 7 (declaration -> class .)
    PRINT           reduce using rule 7 (declaration -> class .)
    RETURN          reduce using rule 7 (declaration -> class .)
    NEW             reduce using rule 7 (declaration -> class .)
    NUMBER          reduce using rule 7 (declaration -> class .)
    TRUE            reduce using rule 7 (declaration -> class .)
    FALSE           reduce using rule 7 (declaration -> class .)
    LPAREN          reduce using rule 7 (declaration -> class .)
    NOT             reduce using rule 7 (declaration -> class .)
    MINUS           reduce using rule 7 (declaration -> class .)
    $end            reduce using rule 7 (declaration -> class .)
    RBRACE          reduce using rule 7 (declaration -> class .)


state 8

    (23) varDeclaration -> type . ID
    (24) varDeclaration -> type . ID ASSIGN expression

    ID              shift and go to state 42


state 9

    (27) type -> ID .
    (59) primary -> ID .

  ! reduce/reduce conflict for ID resolved using rule 27 (type -> ID .)
    ID              reduce using rule 27 (type -> ID .)
    LPAREN          reduce using rule 59 (primary -> ID .)
    DOT             reduce using rule 59 (primary -> ID .)
    ASSIGN          reduce using rule 59 (primary -> ID .)
    TIMES           reduce using rule 59 (primary -> ID .)
    DIVIDE          reduce using rule 59 (primary -> ID .)
    PLUS            reduce using rule 59 (primary -> ID .)
    MINUS           reduce using rule 59 (primary -> ID .)
    GREATER         reduce using rule 59 (primary -> ID .)
    LESS            reduce using rule 59 (primary -> ID .)
    GREATEROREQUAL  reduce using rule 59 (primary -> ID .)
    LESSOREQUAL     reduce using rule 59 (primary -> ID .)
    EQUALS          reduce using rule 59 (primary -> ID .)
    NOTEQUALS       reduce using rule 59 (primary -> ID .)
    OR              reduce using rule 59 (primary -> ID .)
    AND             reduce using rule 59 (primary -> ID .)
    FUNC            reduce using rule 59 (primary -> ID .)
    CLASS           reduce using rule 59 (primary -> ID .)
    INT             reduce using rule 59 (primary -> ID .)
    BOOL            reduce using rule 59 (primary -> ID .)
    IF              reduce using rule 59 (primary -> ID .)
    WHILE           reduce using rule 59 (primary -> ID .)
    PRINT           reduce using rule 59 (primary -> ID .)
    RETURN          reduce using rule 59 (primary -> ID .)
    NEW             reduce using rule 59 (primary -> ID .)
    NUMBER          reduce using rule 59 (primary -> ID .)
    TRUE            reduce using rule 59 (primary -> ID .)
    FALSE           reduce using rule 59 (primary -> ID .)
    NOT             reduce using rule 59 (primary -> ID .)
    $end            reduce using rule 59 (primary -> ID .)
    RBRACE          reduce using rule 59 (primary -> ID .)

  ! ID              [ reduce using rule 59 (primary -> ID .) ]


state 10

    (13) statement -> expression .

    FUNC            reduce using rule 13 (statement -> expression .)
    CLASS           reduce using rule 13 (statement -> expression .)
    INT             reduce using rule 13 (statement -> expression .)
    BOOL            reduce using rule 13 (statement -> expression .)
    ID              reduce using rule 13 (statement -> expression .)
    IF              reduce using rule 13 (statement -> expression .)
    WHILE           reduce using rule 13 (statement -> expression .)
    PRINT           reduce using rule 13 (statement -> expression .)
    RETURN          reduce using rule 13 (statement -> expression .)
    NEW             reduce using rule 13 (statement -> expression .)
    NUMBER          reduce using rule 13 (statement -> expression .)
    TRUE            reduce using rule 13 (statement -> expression .)
    FALSE           reduce using rule 13 (statement -> expression .)
    LPAREN          reduce using rule 13 (statement -> expression .)
    NOT             reduce using rule 13 (statement -> expression .)
    MINUS           reduce using rule 13 (statement -> expression .)
    $end            reduce using rule 13 (statement -> expression .)
    RBRACE          reduce using rule 13 (statement -> expression .)


state 11

    (14) statement -> ifStatement .

    FUNC            reduce using rule 14 (statement -> ifStatement .)
    CLASS           reduce using rule 14 (statement -> ifStatement .)
    INT             reduce using rule 14 (statement -> ifStatement .)
    BOOL            reduce using rule 14 (statement -> ifStatement .)
    ID              reduce using rule 14 (statement -> ifStatement .)
    IF              reduce using rule 14 (statement -> ifStatement .)
    WHILE           reduce using rule 14 (statement -> ifStatement .)
    PRINT           reduce using rule 14 (statement -> ifStatement .)
    RETURN          reduce using rule 14 (statement -> ifStatement .)
    NEW             reduce using rule 14 (statement -> ifStatement .)
    NUMBER          reduce using rule 14 (statement -> ifStatement .)
    TRUE            reduce using rule 14 (statement -> ifStatement .)
    FALSE           reduce using rule 14 (statement -> ifStatement .)
    LPAREN          reduce using rule 14 (statement -> ifStatement .)
    NOT             reduce using rule 14 (statement -> ifStatement .)
    MINUS           reduce using rule 14 (statement -> ifStatement .)
    $end            reduce using rule 14 (statement -> ifStatement .)
    RBRACE          reduce using rule 14 (statement -> ifStatement .)


state 12

    (15) statement -> whileStatement .

    FUNC            reduce using rule 15 (statement -> whileStatement .)
    CLASS           reduce using rule 15 (statement -> whileStatement .)
    INT             reduce using rule 15 (statement -> whileStatement .)
    BOOL            reduce using rule 15 (statement -> whileStatement .)
    ID              reduce using rule 15 (statement -> whileStatement .)
    IF              reduce using rule 15 (statement -> whileStatement .)
    WHILE           reduce using rule 15 (statement -> whileStatement .)
    PRINT           reduce using rule 15 (statement -> whileStatement .)
    RETURN          reduce using rule 15 (statement -> whileStatement .)
    NEW             reduce using rule 15 (statement -> whileStatement .)
    NUMBER          reduce using rule 15 (statement -> whileStatement .)
    TRUE            reduce using rule 15 (statement -> whileStatement .)
    FALSE           reduce using rule 15 (statement -> whileStatement .)
    LPAREN          reduce using rule 15 (statement -> whileStatement .)
    NOT             reduce using rule 15 (statement -> whileStatement .)
    MINUS           reduce using rule 15 (statement -> whileStatement .)
    $end            reduce using rule 15 (statement -> whileStatement .)
    RBRACE          reduce using rule 15 (statement -> whileStatement .)


state 13

    (16) statement -> printStatement .
